service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8000    # Порт, на котором сервис доступен внутри кластера
      targetPort: 8000  # Порт приложения в контейнере
  type: NodePort  # Делаем сервис доступным извне через выделенный порт
